fixed the console overflow problem

--- a/sheets/views/toolbar/ribbons/editor.less
+++ b/sheets/views/toolbar/ribbons/editor.less
@@ -106,8 +106,11 @@
         font-family: @source-code-pro-typeface;
         font-size: 18px;
         letter-spacing: 2px;
+        text-align: center;
         color: #2A75C0;
         overflow: hidden;
+        max-height: 29px;
+        max-width: calc( ~'100vw' - @editor-ribbon-sum-of-icon-widths - 140px );
     }
 
 //
